workload/apps/kiali/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-kiali
  namespace: kiali
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
      ports:
        - protocol: TCP
          port: 9090
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
      ports:
        - protocol: TCP
          port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 20001
        - protocol: TCP
          port: 15008
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
